Corrected nav alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -115,9 +115,6 @@ header {
 				&:last-child {
 					a {
 						margin-left: 20px;
-						@media @tablet {
-							margin-left: 0;
-						}
 					}
 				}
 				&.selected {
